pods/pv.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    name: webserver
  name: nginx-webserver
spec:
  containers: 
    -
      image: nginx
      name: webserver
      ports:
        -
          containerPort: 80
          name: http
      volumeMounts:
        -
          mountPath: /opt
          name: app-data
  volumes:
    -
      name: app-data
      persistentVolumeClaim:
        claimName: sample-pvc
