pods/resources.yml
apiVersion: v1
kind: Pod
metadata:
  name: sample-resources
spec:
  containers:
  - name: nginx
    image: nginx
    resources:
      requests:
        memory: "250Mi"
        cpu: "100m"
      limits:
        memory: "10Gi"
        cpu: "2000m"
