pods/rs.yml
apiVersion: v1
kind: Pod
metadata:
  name: dummy
  labels:
    tier: frontend
spec:
  containers:
    - name: nginx
      image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: dummy1
  labels:
    tier: frontend
spec:
  containers:
    - name: nginx
      image: nginx
