pods/sample1.yml
apiVersion: v1
kind: Pod
metadata:
  name: sample1
spec:
  containers:
    - name: nginx
      image: nginx
