pods/sample2.yml
apiVersion: v1
kind: Pod
metadata:
  name: sample2
spec:
  containers:
    - name: nginx
      image: nginx
    - name: centos
      image: centos:7
      command: ["sleep", "10000"]
