pods/sample3.yml
apiVersion: v1
kind: Pod
metadata:
  name: sample3
spec:
  containers:
    - name: centos
      image: centos:7
      command: ["sleep", "1000"]
