pods/ns-np.yml
## NameSpace and Network Policy
apiVersion: v1
kind: Namespace
metadata:
  name: dev
---
apiVersion: v1
kind: Namespace
metadata:
  name: prod
---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: prod
  labels:
    component: frontend
spec:
  containers:
    - name: nginx
      image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: centos
  namespace: dev
spec:
  containers:
    - name: centos
      image: centos:7
      command: ["sleep", "100000"]

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
  namespace: prod
spec:
  podSelector: {}
  policyTypes:
  - Ingress
